Register user input

--- a/index.html
+++ b/index.html
@@ -7,27 +7,23 @@
     <title>Softuni Wizard 2024</title>
 </head>
 <body>
-    <!-- game screen-->
+    <!-- game screen -->
     <div class="game-section">
-        
-        <!-- score-->
+        <!-- score -->
         <div class="game-score">0 pts.</div>
 
-        <!-- game start screen-->
-         <div class="game-start">Press to play!</div>
+        <!-- game start screen -->
+        <div class="game-start">Press to play!</div>
 
-          <!-- main game area -->
-           <div class="game-area"></div>
+        <!-- main game area -->
+        <div class="game-area"></div>
 
-           <!-- game over screen-->
-           <div class="game-over hidden">
-            <img src="images/GAME-OVER.PNG" alt="Game Over GIF"
-            style="width: 200px; height: auto; padding: auto;">
+        <!-- game over screen -->
+        <div class="game-over hidden">
+            <img src="images/GAME-OVER.PNG" alt="Game Over GIF" style="width: 200px; height: auto; padding: auto;">
         </div>
-
-
-           </div>
-        <!-- game screen end-->
-    <script  type="module" src="main.js"></script>
+    </div>
+    <!-- game screen end -->
+    <script type="module" src="main.js"></script>
 </body>
 </html>
