Create static fireball with wizard animation

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- game screen -->
     <div class="game-section">
         <!-- score -->
-        <div class="game-score">0 pts.</div>
+        <div class="game-score">0 points</div>
 
         <!-- game start screen -->
         <div class="game-start">Press to play!</div>
