--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
     </div>
     <!-- game screen end -->
     <script type="module" src="main.js"></script>
+<!-- Sound effect -->
+<audio id="fireball-sound" src="sounds/Fireball_Magic_Attack_Sound_Effect.mp3"></audio>
+
 </body>
 </html>
