--- a/index.html
+++ b/index.html
@@ -19,17 +19,16 @@
         <div class="game-score">0 points</div>
 
         <!-- game start screen -->
-        <div class="game-start">Press to play!</div>
+        <div class="game-start">Enter Battle</div>
 
         <!-- main game area -->
         <div class="game-area"></div>
 
         <!-- game over screen -->
-        <div class="game-over hidden">
-            <img src="images/GAME-OVER.PNG" alt="Game Over GIF" style="width: 200px; height: auto; padding: auto;">
-        </div>
+        <div class="game-over hidden">Try again</div>
     </div>
-    <!-- game screen end -->
+    <!-- experience gain display -->
+    <div class="experience-gain hidden"></div>
 
     <!-- Sound effect -->
     <audio id="fireball-sound" src="sounds/Fireball_Magic_Attack_Sound_Effect.mp3"></audio>
